--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,14 +34,24 @@
 
  <div>
    <app-contac-us></app-contac-us>
+   
   </div>
+<div>
+    <app-gallery></app-gallery>  
+</div>
 
    
      <div id="footer-container">
 
         <footer class="ui-footer ui-footer--clearfix">
              <!--  -->
-            
+             <div class="SocialMeadia">
+                <a href=""><img src="../assets/SocialMedia/021-facebook.png" alt="facebook"></a>
+                <a href=""><img src="../assets/SocialMedia/025-instagram.png" alt="instagram"></a>
+                <a href=""><img src="../assets/SocialMedia/038-github.png" alt="github"></a>
+                <a href=""><img src="../assets/SocialMedia/043-twitter.png" alt="twitter"></a>
+                <a href=""><img src="../assets/SocialMedia/045-linkedin.png" alt="linkedin"></a>
+            </div>
             <div class="ui-footer__wrap ui-footer__wrap--newsletter ui-footer--clearfix">
                 <!-- 63.75% -->
                 <div class="ui-footer__menu-block">
