--- a/src/app/contac-us/contac-us.component.html
+++ b/src/app/contac-us/contac-us.component.html
@@ -1,1 +1,31 @@
 <p>contac-us works!</p>
+
+<Table style="width:100%;font-size:30; border-collapse:collapse;">
+    <tr  STYLE="background-color:#b7b6a8;"> 
+        <td>T.P.</td>
+        <td>0716880538</td>	
+    </tr>
+    <tr STYLE="background-color:#a09f8d;">
+        <td>Fax</td>
+        <td>0716880538</td>	
+    </tr>
+    <tr STYLE="background-color:#b7b6a8;">
+        <td>Email</td>
+        <td><a href="Kasunhasanga96@gmail.com">Kasunhasanga96@gmail.com</a></td>	
+    </tr>
+    <tr STYLE="background-color:#a09f8d;">
+        <td>Address</td>
+        <td><i>Kasun hasanga<br>
+         Kuruwita<br>
+         Rathnapura</i>
+        </td>	
+    </tr>
+    <tr  STYLE="background-color:#b7b6a8;">
+        <td> Map</td>
+        <td>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7924.832005967143!2d80.78038937217879!3d6.7189837857509715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae38a43aeba7683%3A0x7ad9330814e6794a!2sPambahinna!5e0!3m2!1sen!2slk!4v1546071929657" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></td>	
+    </tr>
+    
+    
+    
+</Table>
